[package]
name = "vendor-deconflict"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
listenfd = "1.0.1"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
neo4rs = "0.7.1"
clap = { version = "4.5.1", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"]}
axum = "0.7.4"
serde = { version = "1.0.197", features = ["derive"] }